# adventofcode

./: .gitignore  AoC-2020.sln  README.md
2015/: README.md
2015/haskell/: day01.hs  day02.hs
2015/rust/day 03/: part2.rs
2015/rust/day 04/: part1.rs
2015/rust/day 05/: part1.rs
2016/zig/: README.md  build.zig  run.sh
2016/zig/src/: day01.zig  day02.zig  day03.zig  utils.zig
2020/csharp/: day5.cs
2021/js/day 01/: part2.js
2021/js/day 02/: part2.js
2022/rust/day 01/: part2.rs
2022/rust/day 03/: part1.rs
2022/rust/day 05/: part2.rs
2022/rust/day 08/: part1.rs
2022/rust/day 09/: part2_2.rs
2023/haskell/: README.md  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  haskell.cabal  out.txt
2024/haskell/: CHANGELOG.md  README.md  SETUP.md  aoc2024.cabal
2024/haskell/app/: Main.hs
2024/haskell/docs/day3/: all segments.txt  do segments.txt  original.txt
2024/haskell/lib/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayTest.hs
2024/haskell/test/: Day1Test.hs  Day2Test.hs  Day3Test.hs  Day4Test.hs  Day5Test.hs  Day6Test.hs  DayTestTest.hs  Main.hs  README.md
Advent of Code 2015/Day2/part_one/: Cargo.toml
Advent of Code 2015/Day2/part_one/src/: main.rs
Advent of Code 2015/Day3/part_one/: Cargo.toml
Advent of Code 2015/Day3/part_one/src/: main.rs
Advent of Code 2015/Day4/part_one/: Cargo.toml
Advent of Code 2015/Day4/part_two/: Cargo.toml
Advent of Code 2015/Day5/part_one/input/: test.txt
Advent of Code 2015/Day5/part_two/src/: main.rs
Advent of Code 2015/Day6/part_two/input/: test.txt
Advent of Code 2015/Day6/part_two/src/: main.rs
Advent of Code 2015/rust/day 01/: part1.rs  part2.rs
Advent of Code 2015/rust/day 02/: part2.rs
Advent of Code 2015/rust/day 03/: part1.rs
Advent of Code 2015/rust/day 04/: part2.rs
Advent of Code 2015/rust/day 06/: part1.rs
Advent of Code 2016/: README.md
Advent of Code 2016/Assembly/Day 1/: part1.asm
Advent of Code 2020/AoC.1_ReportRepair/: Program.cs
Advent of Code 2020/AoC.2_PasswordPhilosophy/: AoC.2_PasswordPhilosophy.csproj
Advent of Code 2020/AoC.4_PassportProcessing/: Program.cs
Advent of Code 2020/AoC.4_PassportProcessing/Properties/: AssemblyInfo.cs
Advent of Code 2020/AoC.5_BinaryBoarding/: AoC.5_BinaryBoarding.csproj
Advent of Code 2020/AoC.6_CustomCustoms/: AoC.6_CustomCustoms.csproj
Advent of Code 2020/csharp/: day3.cs
Advent of Code 2020/csharp/AoC.1_ReportRepair/: AoC.1_ReportRepair.csproj
Advent of Code 2020/csharp/AoC.1_ReportRepair/Properties/: AssemblyInfo.cs
Advent of Code 2020/csharp/AoC.2_PasswordPhilosophy/Properties/: AssemblyInfo.cs
Advent of Code 2020/csharp/AoC.4_PassportProcessing/: AoC.4_PassportProcessing.csproj
Advent of Code 2020/csharp/AoC.6_CustomCustoms/Properties/: AssemblyInfo.cs
Advent of Code 2020/csharp/AoC.Foundation/: AoC.Foundation.csproj
Advent of Code 2020/csharp/AoC.Foundation/Properties/: AssemblyInfo.cs
Advent of Code 2020/csharp/helperclasses/: DataO.cs  IPart.cs  Passport.cs  Person.cs
Advent of Code 2021/cli/: main.js
Advent of Code 2021/events/2021/03/: 2.js  bothParts.py
Advent of Code 2022/: README.md
Advent of Code 2022/Day1/part_one/src/: main.rs
Advent of Code 2022/Day1/part_two/src/: main.rs
Advent of Code 2022/Day2/part_one/src/: main.rs
Advent of Code 2022/Day3/part_one/src/: main.rs
Advent of Code 2022/Day3/part_two/src/: main.rs
Advent of Code 2022/Day4/part_one/src/: main.rs
Advent of Code 2022/Day4/part_two/: Cargo.toml
Advent of Code 2022/Day4/part_two/src/: main.rs
Advent of Code 2022/Day5/part_two/: Cargo.toml
Advent of Code 2022/Day6/part_two/src/: main.rs
Advent of Code 2022/Day7/part_one/src/: main.rs
Advent of Code 2022/Day7/part_two/: .gitignore
Advent of Code 2022/Day7/part_two/src/: main.rs
Advent of Code 2022/Day8/part_one/: Cargo.toml
Advent of Code 2022/Day8/part_two/src/: main.rs
Advent of Code 2022/rust/day 02/: part2.rs
Advent of Code 2022/rust/day 04/: part1.rs
Advent of Code 2022/rust/day 05/: part1.rs
Advent of Code 2022/rust/day 06/: part1.rs
Advent of Code 2022/rust/day 07/: part2.rs
Advent of Code 2022/rust/day 09/: part1.rs  part2_1.rs
Advent of Code 2023/csharp/day 01/: Part1.cs  README.md
Advent of Code 2023/haskell/: .gitignore  README.md  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs
Advent of Code/cli/: cli.js  main.js  package-lock.json  package.json
Advent of Code/cli/src/: cli.js
Advent of Code/events/2021/03/: 1.js
Advent of Code/vue-app/: package-lock.json  package.json
Advent of Code/vue-app/public/: index.html
Advent of Code/vue-app/public/css/: bs-overwrite.css
Advent of Code/vue-app/src/: App.vue  main.js
Advent of Code/vue-app/src/components/: 2021.vue  Navigation.vue
AoC.2_PasswordPhilosophy/: Program.cs
AoC.3_TobogganTrajectory/: AoC.3_TobogganTrajectory.csproj  Slope.cs
AoC.3_TobogganTrajectory/Properties/: AssemblyInfo.cs
AoC.4_PassportProcessing/: packages.config
AoC.5_BinaryBoarding/: BoardingPass.cs
AoC.5_BinaryBoarding/Properties/: AssemblyInfo.cs
AoC.6_CustomCustoms/: Group.cs  Program.cs
AoC.Foundation/: AoC.Foundation.csproj  DayPart.cs  IntegerHelper.cs
other/csharp/: .gitignore  csharp.sln
other/csharp/AoC/: AoC.csproj  Program.cs  RunHelper.cs  UXHandler.cs
other/csharp/AoC/Abstract/: IPart.cs
other/csharp/AoC/AppHelpers/: AoCConfig.cs  GlobalExceptionHandler.cs  InputGetter.cs  OutputPoster.cs  (+3 more)
(+23 files in other folders)
