cabal-version:      3.0

name:               haskell

version:            0.1.0.0

-- The package author(s).
author:             Eldar Omerovic

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         eldar.work.edu@gmail.com

-- A copyright notice.
-- copyright:
category:           Advent of Code
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common day
    build-depends:
        base == 4.*,
        containers,
        array,
        bytestring,
        binary,
        split
    default-language: Haskell2010
    default-extensions: TupleSections, NumericUnderscores

library

    -- Modules exported by the library.
    exposed-modules:  

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.1

    -- Directories containing source files.
    hs-source-dirs:   common

    -- Base language which the package is written in.
    default-language: Haskell2010

executable 01
    import:           day
    main-is:          day01.hs

executable 02
    import:           day
    main-is:          day02.hs

executable 03
    import:           day
    main-is:          day03.hs

executable 04
    import:           day
    main-is:          day04.hs

executable 05
    import:           day
    main-is:          day05.hs

executable 06
    import:           day
    main-is:          day06.hs

executable 07
    import:           day
    main-is:          day07.hs

executable 08
    import:           day
    main-is:          day08.hs

executable 09
    import:           day
    main-is:          day09.hs

executable 10
    import:           day
    main-is:          day10.hs

executable 11
    import:           day
    main-is:          day11.hs

executable 12
    import:           day
    main-is:          day12.hs

executable 13
    import:           day
    main-is:          day13.hs

executable 14
    import:           day
    main-is:          day14.hs

executable 15
    import:           day
    main-is:          day15.hs

executable 16
    import:           day
    main-is:          day16.hs

executable 17
    import:           day
    main-is:          day17.hs
    build-depends:    psqueues

