cabal-version:      3.0

name:               aoc2024
version:            0.1.0.0

license:            MIT
license-file:       LICENSE


author:             Eldar Omerovic

category:           Advent of Code
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  DayTest
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   lib
    default-language: Haskell2010

executable day
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        aoc2024

test-suite test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        HUnit,
        aoc2024
