cabal-version:      3.0

name:               aoc2024
version:            0.1.0.0

license:            MIT
license-file:       LICENSE


author:             Eldar Omerovic

category:           Advent of Code
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Day1, Day2, Day3, Day4, Day5, Day6, Day7, Common
    hs-source-dirs:   lib
    default-language: Haskell2010
    build-depends:    
        base ^>=4.17.2.1,
        regex-pcre ^>=0.95.0.0,
        regex-base,
        split ^>= 0.2.3.5,
        array >= 0.5,
        containers

executable day
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        aoc2024

test-suite test
    import:           warnings
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        HUnit,
        aoc2024
